Agregación de la Página de Servicios

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /*ESTILOS DE LA PÁGINA DE INICIO*/
+
 body {
     font-family: 'Montserrat', sans-serif;
 }
@@ -169,3 +170,60 @@ main {
     font-size: 15px;
     margin: 20px;
 }
+
+/*ESTILOS DE LA PÁGINA DE SERVICIOS*/
+
+.serviciosBarberia {
+    width: 940px;
+    margin: auto;
+    padding: 50px;
+}
+
+.listaServicios {
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border-color: black;
+    border-width: 2px;
+    border-style: solid;
+    border-top-width: 5px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: white;
+}
+
+.listaServicios:hover {
+    border-color: red;
+}
+
+.listaServicios:active {
+    border-color: green;
+}
+
+.tituloServicio {
+    font-size: 30px;
+    font-weight: bold;
+    color: red;
+}
+
+.tituloServicio:hover {
+    font-size: 35px;
+    color: green;
+}
+
+.servicioDescripcion {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.servicioPrecio {
+    font-size: 15px;
+    font-weight: bold;
+    color: green;
+    margin-top: 10px;
+}
+
